# uninstaller

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uninstaller/: __init__.py  __main__.py  uninstaller.py
tests/: test_cli.py  util.py
